crates/clan/clan-core/tests/snapshots/clan_golden__vocd_mor_gra@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
****** Speaker: *CHI:
it be I want cookie 
****** Speaker: *MOT:
Mommy will get them
