crates/clan/clan-core/tests/snapshots/clan_golden__vocd_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
****** Speaker: *CHI:
WARNING: Not enough tokens for random sampling without replacement.
  (4 tokens available, 50 required)

****** Speaker: *MOT:
WARNING: Not enough tokens for random sampling without replacement.
  (4 tokens available, 50 required)
