crates/clan/clan-core/tests/snapshots/clan_golden__vocd_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
****** Speaker: *CHI:
WARNING: Not enough tokens for random sampling without replacement.
  (4 tokens available, 50 required)
