crates/clan/clan-core/tests/snapshots/clan_golden__wdlen_eng@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Number of words of each length in characters
lengths     1    2    3    4    5    6    7    8   Mean
*GES:       0    4    3    2    3    0    1    0  3.615
*SPE:       0    4    5    2    2    0    1    1  3.733
-------

Number of utterances of each of these lengths in words
lengths     1    2    3    4    5    6    7    8    9   10   11   12   Mean
*GES:       0    0    1    1    0    1    0    0    0    0    0    0  4.333
*SPE:       0    0    1    0    0    0    0    0    0    0    0    1  7.500
-------

Number of single turns of each of these lengths in utterances
lengths     1    2   Mean
*GES:       1    1  1.500
*SPE:       2    0  1.000
-------

Number of single turns of each of these lengths in words
lengths     1    2    3    4    5    6    7    8    9   10   11   12   Mean
*GES:       0    0    1    0    0    0    0    0    0    1    0    0  6.500
*SPE:       0    0    1    0    0    0    0    0    0    0    0    1  7.500
-------

Number of words of each of these morpheme lengths
lengths     1    2   Mean
*GES:      10    3  1.231
*SPE:      12    3  1.200
-------

Number of utterances of each of these lengths in morphemes
lengths     1    2    3    4    5    6    7    8    9   10   11   12   13   14   15   16   17   18   19   20   21   22   23   24   25   26   Mean
*GES:       0    0    0    0    0    0    1    0    1    0    0    0    1    0    0    0    0    0    0    0    0    0    0    0    0    0  9.667
*SPE:       0    0    0    0    0    0    1    0    0    0    0    0    0    0    0    0    0    0    0    0    0    0    0    0    0    1 16.500
  </Table>
 </Worksheet>
</Workbook>
