crates/clan/clan-core/tests/snapshots/clan_golden__wdlen_eng@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: SPE
  Total words: 15
  Mean word length: 3.733
  Length  Count
  ------  -----
  2       4    
  3       5    
  4       2    
  5       2    
  7       1    
  8       1    

Speaker: GES
  Total words: 13
  Mean word length: 3.615
  Length  Count
  ------  -----
  2       4    
  3       3    
  4       2    
  5       3    
  7       1
