crates/clan/clan-core/tests/snapshots/clan_golden__wdlen_speaker_chi@clan.snap
---
source: tests/clan_golden.rs
expression: clan_output
---
Number of words of each length in characters
lengths     1    2    3    4    5    6    7   Mean
*CHI:       1    0    1    1    0    0    1  3.750
-------

Number of utterances of each of these lengths in words
lengths     1    2    3    4   Mean
*CHI:       0    0    0    1  4.000
-------

Number of single turns of each of these lengths in utterances
lengths     1   Mean
*CHI:       1  1.000
-------

Number of single turns of each of these lengths in words
lengths     1    2    3    4   Mean
*CHI:       0    0    0    1  4.000
-------

Number of words of each of these morpheme lengths
lengths     1    2   Mean
*CHI:       2    2  1.500
-------

Number of utterances of each of these lengths in morphemes
lengths     1    2    3    4    5    6    7    8    9   10   Mean
*CHI:       0    0    0    0    0    0    0    0    0    1 10.000
  </Table>
 </Worksheet>
</Workbook>
