crates/clan/clan-core/tests/snapshots/clan_golden__wdlen_speaker_chi@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total words: 4
  Mean word length: 3.750
  Length  Count
  ------  -----
  1       1    
  3       1    
  4       1    
  7       1
