crates/clan/clan-core/tests/snapshots/clan_golden__wdsize_main_tier@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total words: 4
  Mean word size: 4.000
  Length  Count
  ------  -----
  1       1    
  4       2    
  7       1    

Speaker: MOT
  Total words: 4
  Mean word size: 4.000
  Length  Count
  ------  -----
  3       1    
  4       2    
  5       1
