crates/clan/clan-core/tests/snapshots/clan_golden__wdsize_mor_gra@rust.snap
---
source: tests/clan_golden.rs
expression: rust_output
---
Speaker: CHI
  Total words: 5
  Mean word size: 3.000
  Length  Count
  ------  -----
  1       1    
  2       2    
  4       1    
  6       1    

Speaker: MOT
  Total words: 4
  Mean word size: 4.000
  Length  Count
  ------  -----
  3       1    
  4       2    
  5       1
